--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="row justify-content-center">
       <div class="col-6 text-center m-3">
         <div class="field">
-          <%= form.text_field :message, class: "form-control mt-1" %>
+          <%= form.text_field :message, class: "form-control mt-1", placeholder: "What's on your mind?" %>
         </div>
         <br>
         <div class="field">
@@ -26,7 +26,7 @@
 
         <div class="field">
           <%= form.label :upload_Video, class: "form-label" %>
-          <%= form.text_field :video_url, class: "form-control mt-1" %>
+          <%= form.text_field :video_url, class: "form-control mt-1", placeholder: "Paste your URL here..." %>
         </div>
        <br>
 
