--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <div class="container"> 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mt-3">
     <div class="col-12 col-md-9 d-flex flex-column justify-content-center">  
     <% if Current.user %>
       <%= render "form", post: @post %>
